..F....... [ZBX-13263] fixed readability issues for option group items in firefox
git-svn-id: svn://svn.zabbix.com/branches/dev@76646 f4e7fd02-d210-4e34-a1e0-d4093fb66cc2

--- a/ZBX-13263/sass/stylesheets/sass/screen.scss
+++ b/ZBX-13263/sass/stylesheets/sass/screen.scss
@@ -1827,6 +1827,10 @@ select {
 		}
 	}
 
+	optgroup {
+		background-color: $body-bg-color;
+	}
+
 	&[multiple] {
 		padding: 4px 5px;
 		width: 300px;
